# bitcoin-peers

./: Cargo.toml  README.md  justfile
.cargo/: config.toml
.github/workflows/: ci.yml
connection/: CHANGELOG.md  Cargo.toml  README.md
connection/examples/: connection.rs
connection/src/: lib.rs  peer.rs  user_agent.rs
connection/src/connection/: configuration.rs  error.rs  futures.rs  handshake.rs  io.rs  mod.rs  state.rs  tcp.rs
connection/src/transport/: mod.rs  v1.rs  v2.rs
connection/tests/: connection.rs
crawler/: CHANGELOG.md  Cargo.toml  README.md
crawler/contrib/: performance.sh
crawler/docs/: DESIGN.md  PERFORMANCE.md
crawler/examples/: crawler.rs
crawler/src/: builder.rs  connection.rs  crawler.rs  lib.rs  session.rs
doc/: DESIGN.md
examples/: connection.rs  crawler.rs  split_connection.rs
src/: connection.rs  crawler.rs  error.rs  lib.rs  peer.rs  transport.rs  v1.rs
src/connection/: configuration.rs  error.rs  handshake.rs  io.rs  mod.rs  state.rs  tcp.rs
src/transport/: mod.rs  v1.rs  v2.rs
tests/: connection.rs
