[package]
name = "bitcoin-peers"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "CC0"
description = ""
repository = "https://github.com/nyonson/bitcoin-peers"

[dependencies]
bitcoin = { version = "0.32.6" }
bip324 = { version = "0.7.0", features = ["tokio"] }
# Basic runtime, networking, I/O utilities, and time utilities.
tokio = { version = "1", features = ["rt", "net", "io-util", "time"] }

[dev-dependencies]
clap = { version = "4.5.39", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
