[package]
name = "bitcoin-peers"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "CC0"
description = "General tooling for interacting with and analyzing peers of a bitcoin network"
authors = ["Nick Johnson <nick@yonson.dev>"]
repository = "https://github.com/nyonson/bitcoin-peers"
keywords = ["bitcoin", "network", "peer-to-peer"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
bitcoin = { version = "0.32.6" }
bip324 = { version = "0.7.0", features = ["tokio"] }
# Basic runtime, networking, I/O utilities, time utilities, and special sync utilities (channels).
tokio = { version = "1", features = ["rt", "net", "io-util", "time", "sync"] }
log = { version = "0.4.8" }

[dev-dependencies]
clap = { version = "4.5.39", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
simplelog = { version = "0.12" }
env_logger = { version = "0.11" }
# For I/O mocking.
tokio-test = "0.4"
